# my_offer

./: .gitignore  10dp.cpp  10dp_b.cpp  10fib.cpp  10ways.cpp  13search.cpp  16linked.cpp  210726_PERServiceVariants.pptx  25linked.cpp  32tree_a.cpp  33tree.cpp  34tree.cpp  37tree.cpp  40sort_b.cpp  51sort.cpp  58string1.cpp  59queue.cpp  63dp.cpp  Book1.xlsx  CMakeLists.txt  ODC_functionalChain_210720.pptx  README.md  arch.emf  backtrack1.cpp  backtrack2.cpp  head.hpp  key.md  offer.sh  pjfa.yaml  pub.c  tree.cpp  tree_deep.cpp  tree_deep2.cpp  tree_recur.cpp  wish.md  买房.xlsx
New folder/: AEB_Architecture_Interfaces_current.vsdx  LongComf_Architecture_Interfaces_v1.1.vsdx
adas/: 2023.md  index.md
adas/0 PI/: Bosch(2020.4-2022.5).md  jd-sw-arch.md  jd.md  time.md
adas/pi/: PI03.md
adas/resume/: jiang yi -BOSCH-En-20220720.doc  jiang yi -Veoneer-En-20200412.doc  jiang yi -Veoneer-En-20220720.doc  jiang yi-Bosch-Cn-20220217.doc  resume.md  姜 祎-Bosch-Cn-20220217.doc  姜 祎-Bosch-Cn-20220506.doc  姜 祎-Bosch-Cn-20220720.doc
adas/tech/: ADAS algorithm.md  apollo c++.md  fusion.md  material.md  practice c++.md  roadmap.md
bag/: ros2.md
bag/2021_03_18/: Record.txt
book/: paper.md
book/basis/: index.md
career/: 2023.md  presentation.md
career/resume/: 姜 祎-Bosch-2023.doc  (+1 more)
cpp/: 29spiral.cpp  32tree_b.cpp  47dp.cpp  57array.cpp  index.md
interview/: 02c++.md  04操作系统.md  07网络编程.md  10english.md
living/: 生育购物清单.xlsx
longman3000/: 0index.md  How do I increase my vocabulary.md  Longman_Communication_3000.md  idea.md  plan.md  resume.md  summary.md  word.md
mqtt/: README.md  pub.py  sub.c  sub.py
notebooks/: 2021.md  2022.md  Principles of Economics.md  housing.md  my.md  offer.md  principle.md  resume.md  system.md  vscode.md
notes/: offer.md
os/: 1memory.md  2process.md  index.md
product/: orin-X.md
python/: 13serch.py  20sm.py  24lined_2.py  24linked.py  25linked.py  29spiral.py  32tree_a.py  67string.py  68-2tree.py
questions/: 12.md  18.md  27.md  offer.md
solutions/: 12.md  51.md
start up/: 0.md  1.md
tools/: 0.md  docker.md  gdb.md  git.md  linux.md  nano editor.md  powerpoint.md  ros2.md  ssh.md  vscode_issue.md
wisdom/: 01.md  04.md  06.md  10.md  14.md  15.md  17.md  18.md  19.md  20.md  23.md  24.md  25.md  28.md  32.md  35.md  差距的形成.md  新东方.md
(+355 files in other folders)
