cmake_minimum_required(VERSION 3.0.0)
project(code VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(code03 03array.cpp)
add_executable(code05 05string.cpp)
add_executable(code06a 06linked_a.cpp)
add_executable(code06b 06linked_b.cpp)
add_executable(code10 10dp.cpp)
add_executable(code10b 10dp_b.cpp)
add_executable(code12 12search.cpp)
add_executable(code13 13search.cpp)
add_executable(code18 18linked.cpp)
add_executable(code25 25linked.cpp)
add_executable(code26 26tree.cpp)
add_executable(code30 30stack.cpp)
add_executable(code34 34tree.cpp)
add_executable(code37 37tree.cpp)
add_executable(code40b 40sort_b.cpp)
add_executable(code52 52linked.cpp)
add_executable(code54 54tree.cpp)
add_executable(code55a 55tree_a.cpp)
add_executable(code55b 55tree_b.cpp)
add_executable(code57 57array.cpp)
add_executable(codetreein tree_inorder.cpp)
add_executable(codetreepre tree_preorder.cpp)
add_executable(code32a 32tree_a.cpp)
add_executable(code32b 32tree_b.cpp)
add_executable(code32c 32tree_c.cpp)
add_executable(codeRecur tree_recur.cpp)
add_executable(codebackTrack01 backtrack1.cpp)
add_executable(codebackTrack02 backtrack2.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
